generate with groupings and appropriate cell colours

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
       "NBOMes",
       "2C-x",
       "2C-T-x",
-      "αMT",
+      "aMT",
       "5-MeO-xxT",
       "Cannabis"
     ],
@@ -16,7 +16,7 @@
       "Ketamine",
       "MXE",
       "DXM",
-      "Nitrous Oxide"
+      "Nitrous"
     ],
     [
       "Amphetamines",
