implement much UI wow

--- a/config.json
+++ b/config.json
@@ -45,13 +45,13 @@
     "antidepressant"
   ],
   "interactionClass": {
-    "Low Risk & No Synergy": "safe",
-    "Low Risk & Synergy": "synergy",
-    "Low Risk & Decrease": "decrease",
-    "Caution": "caution",
-    "Unsafe": "unsafe",
-    "Dangerous": "dangerous",
-    "Serotonin Syndrome": "serotoninsyndrome",
-    "fallback": "unknown"
+    "Low Risk & No Synergy": ["safe", "fa-thumbs-o-up"],
+    "Low Risk & Synergy": ["synergy", "fa-thumbs-up"],
+    "Low Risk & Decrease": ["decrease", "fa-angle-double-down"],
+    "Caution": ["caution", "fa-warning"],
+    "Unsafe": ["unsafe", "fa-frown-o"],
+    "Dangerous": ["dangerous", "fa-flash"],
+    "Serotonin Syndrome": ["serotoninsyndrome", "fa-ban"],
+    "fallback": ["unknown", ""]
   }
 }
