Move all options to config.json

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+  "url": "http://nourishedcloud.com/combo_beta_beta.json",
+  "version": "3.0 [PRE-RELEASE|DO-NOT-USE - SOME DATA MAY BE INACCURATE]",
   "tableOrder": [
     [
       "LSD",
