fix combo endpoint

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "http://nourishedcloud.com/combo_beta_beta.json",
+  "url": "http://tripsit.me/combo_beta.json",
   "version": "3.0",
   "tableOrder": [
     [
