--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Generate PNG and PDF files from HTML combo charts",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "nightmare": "^2.5.2",
-    "phantomjs": "^2.1.7"
+    "underscore": "^1.9.1"
   },
   "devDependencies": {},
   "scripts": {
