--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate PNG and PDF files from HTML combo charts",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "nightmare": "^2.5.2",
+    "puppeteer": "^14.3.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {},
