--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "http://tripsit.me/combo_beta.json",
+  "url": "https://github.com/TripSit/drugs/blob/main/combos.json",
   "version": "5.0.0",
   "tableOrder": [
     [
